# interFEBio2

./: .gitignore  pyproject.toml  ws.code-workspace
Tests/: BC.py  order.py  test.py
classExposer/: generator.py
classExposer/BoundaryConditions/: FEFixedDisplacement.json  FEFixedShellDisplacement.json  FEPrescribedShellDisplacement.json
classExposer/Constraints/: FEPrescribedNormalDisplacement.json
classExposer/Loads/: FECentrifugalBodyForce.json  FENodalForce.json
classExposer/Solver/: FENewtonSolver.json  FESolver.json
classExposer/manifests/: Materials.json  Solver.json
docs/source/: conf.py  index.rst  interfebio.rst  xplt.rst
examples/: abdominal_uniaxialData_stress.txt  anillo_aorta_abdominal006Data_force.txt  long.feb  ringTest.py  simple_biaxial_fit.py
interFEBio/: Log.py  __init__.py
interFEBio/Mesh/: Mesh.py  __init__.py
interFEBio/Optimize/: Parameters.py  Storage.py  adapters.py  alignment.py  cases.py  engine.py  engine_support.py  experiments.py  feb_bindings.py  jacobian.py  monitor.py  optimizers.py  options.py  orchestrator.py  residuals.py  runners.py  webui.py
interFEBio/PreProcessing/: Boundary.py  Constraints.py  Contact.py  Control.py  Globals.py  LoadData.py  Loads.py  Material.py  Model.py  Output.py  Rigid.py  Step.py  __init__.py  dataClass.py
interFEBio/Visualization/: BCPicker.py  Plotter.py
interFEBio/XPLT/: BinaryReader.py  Enums.py  XPLT.py  __init__.py
interFEBio/monitoring/: __init__.py  client.py  events.py  paths.py  registry.py  runstate.py  service.py  state.py  system_stats.py  templates.py  webapp.py
src/classExposer/: __init__.py  config.py  extractor.py  generator.py
src/interFEBio/: __init__.py
systemd/: interfebio-monitor.service
testing/: testingImport.py
tests/monitoring/: test_monitor_client.py  test_run_registry.py
tests/optimize/: data.txt  oldFitExample.py  run_parallel_cases.py  simpleBiaxial.feb  test_alignment.py  test_cases.py  test_engine.py  test_feb_template.py  test_jacobian.py  test_monitor.py  test_optimizers.py  test_runners.py  (+1 more)
(+103 files in other folders)
