[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "interFEBio"
version = "2.0.0"
description = "Python bindings and XML model tooling for FEBio."
authors = [{ name = "FEBio Interface Developers" }]
requires-python = ">=3.11"
dependencies = [
  "clang",
  "numpy",
  "sphinx-rtd-theme>=3.0.2",
  "sphinx-autodoc-typehints>=3.2.0",
  "sphinxcontrib-napoleon>=0.7",
  "pyvista",
]
keywords = ["FEBio", "finite element", "biomechanics", "interface"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
  "black>=24.2",
  "build>=1.0",
  "mypy>=1.8",
  "pytest>=7.4",
  "ruff>=0.3",
  "numpy"
]
monitor = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "watchdog>=4.0.0"
]

[project.scripts]
interfebio-monitor = "interFEBio.monitoring.webapp:main"

[tool.hatch.build.targets.wheel]
packages = [
  "interFEBio",
]


[tool.hatch.build.targets.sdist]
include = [
  "interFEBio",
  "pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
mypy_path = ["src"]
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "silent"

[tool.coverage.run]
branch = true
source = ["classExposer"]

[tool.coverage.report]
show_missing = true
skip_covered = true
